# web-transport-ping-pong

./: .dockerignore  Cargo.toml  README.md  client.Dockerfile  client.yaml  server-deploy.yaml  server.Dockerfile
crates/client/: Cargo.toml
crates/client/src/: lib.rs  main.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: common.rs  lib.rs
crates/protocol/src/web_transport/: client.rs  common.rs  server.rs
crates/server/: Cargo.toml
crates/server/certs/: certificate.pem  private_key.pem
crates/server/src/: lib.rs  main.rs
tests/web_transport/: Cargo.toml
tests/web_transport/tests/: ping_pong.rs  retry.rs
tests/web_transport/tests/common/: mod.rs
tests/web_transport/tests/snapshots/: ping_pong__should_do_ping_pong.snap  retry__client_should_reconnect_to_server.snap
