[package]
name = "web_transport"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
client = { path = "../../crates/client" }
insta = { version = "1.29.0", features = ["filters"] }
protocol = { path = "../../crates/protocol" }
server = { path = "../../crates/server" }
tokio = "1.28.2"
tracing-subscriber = "0.3.17"
