[package]
name = "web_transport"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
client = { path = "../../crates/client" }
protocol = { path = "../../crates/protocol" }
server = { path = "../../crates/server" }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
insta = { workspace = true }